chore: release 1.0.0, update metadata, add SPA config

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
   <meta name="theme-color" content="#db2777" />
-  
+
   <!-- Primary Meta Tags -->
   <title>សារភាពស្នេហ៍ - Love Confession | Share Your Heart Anonymously</title>
   <meta name="title" content="សារភាពស្នេហ៍ - Love Confession | Share Your Heart Anonymously" />
   <meta name="description"
     content="សរសេរសារភាពស្នេហ៍/សម្ងាត់/អារម្មណ៍របស់អ្នក ហើយបង្កើត Link ដើម្បី Share ទៅអ្នកដែលអ្នកចង់ប្រាប់។ - Write your love confession/secret and share it anonymously with beautiful animations and modern design." />
-  <meta name="keywords" content="love confession, secret message, anonymous sharing, romantic, heart, love letter, khmer, cambodia, dating, relationship" />
-  <meta name="author" content="Love Confession App" />
+  <meta name="keywords"
+    content="love confession, secret message, anonymous sharing, romantic, heart, love letter, khmer, cambodia, dating, relationship" />
+  <meta name="author" content="Love Confession Team" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English, Khmer" />
   <meta name="revisit-after" content="7 days" />
@@ -23,26 +24,25 @@
   <meta property="og:title" content="សារភាពស្នេហ៍ - Love Confession | Share Your Heart Anonymously" />
   <meta property="og:description"
     content="សរសេរសារភាពស្នេហ៍/សម្ងាត់/អារម្មណ៍របស់អ្នក ហើយបង្កើត Link ដើម្បី Share ទៅអ្នកដែលអ្នកចង់ប្រាប់។" />
-  <meta property="og:image" content="/vite.svg" />
+  <meta property="og:image" content="https://talktonle2.github.io/love-confession/vite.svg" />
   <meta property="og:image:alt" content="Love Confession App - Share Your Heart" />
-  <meta property="og:url" content="https://love-confession.app" />
+  <meta property="og:url" content="https://talktonle2.github.io/love-confession/" />
   <meta property="og:site_name" content="Love Confession" />
   <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="សារភាពស្នេហ៍ - Love Confession | Share Your Heart Anonymously" />
-  <meta property="twitter:description" content="Write your love confession/secret and share it anonymously with beautiful animations and modern design." />
-  <meta property="twitter:image" content="/vite.svg" />
+  <meta property="twitter:description"
+    content="Write your love confession/secret and share it anonymously with beautiful animations and modern design." />
+  <meta property="twitter:image" content="https://talktonle2.github.io/love-confession/vite.svg" />
   <meta property="twitter:image:alt" content="Love Confession App - Share Your Heart" />
-  <meta property="twitter:site" content="@loveconfession" />
-  <meta property="twitter:creator" content="@loveconfession" />
 
   <!-- Additional SEO -->
-  <link rel="canonical" href="https://love-confession.app" />
-  <link rel="alternate" hreflang="en" href="https://love-confession.app/en" />
-  <link rel="alternate" hreflang="km" href="https://love-confession.app/km" />
-  <link rel="alternate" hreflang="x-default" href="https://love-confession.app" />
+  <link rel="canonical" href="https://talktonle2.github.io/love-confession/" />
+  <link rel="alternate" hreflang="en" href="https://talktonle2.github.io/love-confession/" />
+  <link rel="alternate" hreflang="km" href="https://talktonle2.github.io/love-confession/" />
+  <link rel="alternate" hreflang="x-default" href="https://talktonle2.github.io/love-confession/" />
 
   <!-- PWA -->
   <link rel="manifest" href="/manifest.json" />
@@ -59,12 +59,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   <link rel="dns-prefetch" href="//fonts.gstatic.com" />
-  
+
   <!-- Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Outfit:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
-    
+
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
