chore: update icon key and page title to Confession

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
   <meta name="theme-color" content="#db2777" />
 
   <!-- Primary Meta Tags -->
-  <title>សារភាពស្នេហ៍ - Love Confession | Share Your Heart Anonymously</title>
+  <title>Confession | Share Your Heart Anonymously</title>
   <meta name="title" content="សារភាពស្នេហ៍ - Love Confession | Share Your Heart Anonymously" />
   <meta name="description"
     content="សរសេរសារភាពស្នេហ៍/សម្ងាត់/អារម្មណ៍របស់អ្នក ហើយបង្កើត Link ដើម្បី Share ទៅអ្នកដែលអ្នកចង់ប្រាប់។ - Write your love confession/secret and share it anonymously with beautiful animations and modern design." />
