--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <!-- PWA -->
   <link rel="manifest" href="/manifest.json" />
-  <link rel="apple-touch-icon" href="/vite.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="Love Confession" />
